--- a/test/e2e/default/zk-assert.yaml
+++ b/test/e2e/default/zk-assert.yaml
@@ -4,15 +4,6 @@ metadata:
   name: zookeepercluster-sample-server-default
 status:
   replicas: 3
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: zookeepercluster-sample
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: zookeepercluster-sample-nodeport
-
-
+  availableReplicas: 3
+  readyReplicas: 3
+  currentReplicas: 3
