--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,11 @@
-name: main
+name: Release
 
-on: ['push', 'pull_request']
+on:
+  push:
+    tags:
+      - '*'
+env:
+  VERSION: ${{ github.ref_name }}
 
 jobs:
   markdown-lint:
@@ -118,7 +123,7 @@ jobs:
 
   deploy-operator:
     name: Deploy operator
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository_owner == 'lwpk110' }}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'lwpk110' }}
     runs-on: ubuntu-22.04
     needs:
       - golang-lint
@@ -140,6 +145,7 @@ jobs:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - name: Build and push Dev operator
+      - name: Build and push Release operator
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
         run: |
           make docker-buildx
